--- a/index.html
+++ b/index.html
@@ -5,8 +5,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Practice project-2</title>
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+
+    <!-- Google font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=David+Libre:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <style>
+      .font-david-libre{
+        font-family: "David Libre", serif;
+        font-weight: 400;
+        font-style: normal;
+      }
+    </style>
   </head>
-  <body>
-    
+  <body class="font-david-libre w-10/12 mx-auto">
+    <header class="flex justify-between items-center py-4">
+        <div class="flex items-center gap-2">
+            <img class="text-[#EA6D27] w-10" src="assets/logo/flatware_24dp_E3E3E3_FILL0_wght400_GRAD0_opsz24.png" alt="">
+            <h1 class="text-xl font-semibold">restaurant</h1>
+        </div>
+        <div>
+            <ul class="flex gap-8">
+                <li><a href="#">Menu</a></li>
+                <li><a href="#">Events </a></li>
+                <li><a href="#">Gallery</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </div>
+        <div>
+            <button class="bg-[#EA6D27] text-white px-3 py-2">Book a table </button>
+        </div>
+    </header>
   </body>
 </html>
