--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </ul>
         </div>
         <div>
-            <button class="bg-[#EA6D27] text-white px-3 py-2">Book a table </button>
+            <button class="bg-[#EA6D27] text-white px-3 py-2  rounded-tl-xl rounded-br-xl">Book a table </button>
         </div>
     </header>
   </body>
