added dish section

--- a/index.html
+++ b/index.html
@@ -144,10 +144,10 @@
         </p>
 
         <!-- Card div -->
-        <div>
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 mt-10 gap-8 w-8/12 mx-auto pb-20">
           <!-- 1st card -->
           <div
-            class="relative max-w-xs bg-white pt-16 pb-6 px-6 rounded-tl-2xl rounded-br-2xl shadow-lg text-center mx-auto"
+            class="relative max-w-xs bg-white pt-16 pb-6 px-6 rounded-tl-3xl rounded-br-3xl shadow-lg text-center mx-auto"
           >
             <!-- Dish with price -->
             <div class="absolute -top-12 left-1/2 -translate-x-1/2 w-40 h-40">
@@ -167,7 +167,97 @@
             </div>
 
             <!-- Title -->
-            <h2 class="mt-4 text-lg font-semibold">Lumpia with Suace</h2>
+            <h2 class="mt-20 mb-7 text-lg font-semibold">Lumpia with Suace</h2>
+
+            <!-- Description -->
+            <p class="mt-2 text-sm text-gray-500 leading-relaxed">
+              Lorem ipsum dolor sit, consectetur adipiscing elit, sed do eiusmod
+              tempor
+            </p>
+          </div>
+          <!-- 2nd card -->
+          <div
+            class="relative max-w-xs bg-white pt-16 pb-6 px-6 rounded-tl-3xl rounded-br-3xl shadow-lg text-center mx-auto"
+          >
+            <!-- Dish with price -->
+            <div class="absolute -top-12 left-1/2 -translate-x-1/2 w-40 h-40">
+              <!-- Dish image -->
+              <img
+                src="assets/resources/dish-3 1.png"
+                alt="dish"
+                class="w-full h-full object-cover rounded-full border-4 border-white shadow-lg"
+              />
+
+              <!-- Price badge -->
+              <div
+                class="absolute top-2 right-2 bg-black text-white text-sm font-semibold px-3 py-1 rounded-full shadow-md"
+              >
+                $12
+              </div>
+            </div>
+
+            <!-- Title -->
+            <h2 class="mt-20 mb-7 text-lg font-semibold">Fish and Veggie</h2>
+
+            <!-- Description -->
+            <p class="mt-2 text-sm text-gray-500 leading-relaxed">
+              Lorem ipsum dolor sit, consectetur adipiscing elit, sed do eiusmod
+              tempor
+            </p>
+          </div>
+          <!-- 3rd card -->
+          <div
+            class="relative max-w-xs bg-white pt-16 pb-6 px-6 rounded-tl-3xl rounded-br-3xl shadow-lg text-center mx-auto"
+          >
+            <!-- Dish with price -->
+            <div class="absolute -top-12 left-1/2 -translate-x-1/2 w-40 h-40">
+              <!-- Dish image -->
+              <img
+                src="assets/resources/dish-4.png"
+                alt="dish"
+                class="w-full h-full object-cover rounded-full border-4 border-white shadow-lg"
+              />
+
+              <!-- Price badge -->
+              <div
+                class="absolute top-2 right-2 bg-black text-white text-sm font-semibold px-3 py-1 rounded-full shadow-md"
+              >
+                $12
+              </div>
+            </div>
+
+            <!-- Title -->
+            <h2 class="mt-20 mb-7 text-lg font-semibold">Tofu Chili</h2>
+
+            <!-- Description -->
+            <p class="mt-2 text-sm text-gray-500 leading-relaxed">
+              Lorem ipsum dolor sit, consectetur adipiscing elit, sed do eiusmod
+              tempor
+            </p>
+          </div>
+          <!-- 4th card -->
+          <div
+            class="relative max-w-xs bg-white pt-16 pb-6 px-6 rounded-tl-3xl rounded-br-3xl shadow-lg text-center mx-auto"
+          >
+            <!-- Dish with price -->
+            <div class="absolute -top-12 left-1/2 -translate-x-1/2 w-40 h-40">
+              <!-- Dish image -->
+              <img
+                src="assets/resources/dish-1 1.png"
+                alt="dish"
+                class="w-full h-full object-cover rounded-full border-4 border-white shadow-lg"
+              />
+
+              <!-- Price badge -->
+              <div
+                class="absolute top-2 right-2 bg-black text-white text-sm font-semibold px-3 py-1 rounded-full shadow-md"
+              >
+                $12
+              </div>
+            </div>
+
+            <!-- Title -->
+            <h2 class="mt-20 mb-7 text-lg font-semibold">Egg and Cocumber</h2>
 
             <!-- Description -->
             <p class="mt-2 text-sm text-gray-500 leading-relaxed">
