added welcome section

--- a/index.html
+++ b/index.html
@@ -144,7 +144,9 @@
         </p>
 
         <!-- Card div -->
-        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 mt-10 gap-8 w-8/12 mx-auto pb-20">
+        <div
+          class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 mt-10 gap-8 w-8/12 mx-auto pb-20"
+        >
           <!-- 1st card -->
           <div
             class="relative max-w-xs bg-white pt-16 pb-6 px-6 rounded-tl-3xl rounded-br-3xl shadow-lg text-center mx-auto"
@@ -264,6 +266,36 @@
               Lorem ipsum dolor sit, consectetur adipiscing elit, sed do eiusmod
               tempor
             </p>
+          </div>
+        </div>
+      </section>
+
+      <!-- Welcome section -->
+      <section class="w-8/12 mx-auto mt-10 flex flex-col md:flex-row items-center justify-between gap-8 py-16 md:py-24">
+        <div>
+          <img src="assets/resources/dish-2 2.png" alt="" />
+        </div>
+        <div>
+          <h2 class="text-3xl md:text-5xl font-semibold leading-snug md:leading-tight max-w-md mx-auto md:mx-0">
+            Wecome to Our <br />
+            Restaurant
+          </h2>
+          <p class="mt-4 text-gray-500 text-sm md:text-base leading-relaxed max-w-sm mx-auto md:mx-0">
+            Lorem ipsum dolor sit amet, consectetur <br />
+            adipiscing elit, sed do eiusmod tempor incididunt <br />
+            ut labore et dolore magna aliqua.
+          </p>
+          <div class="flex justify-center md:justify-start gap-4 mt-8">
+            <button
+              class="bg-black text-white px-6 py-2 rounded-tl-xl rounded-br-xl hover:bg-gray-800 transition"
+            >
+              Menu
+            </button>
+            <button
+              class="bg-[#EA6D27] text-white px-6 py-2 rounded-tl-xl rounded-br-xl hover:bg-[#d45d1f] transition"
+            >
+              Book a table
+            </button>
           </div>
         </div>
       </section>
