--- a/index.html
+++ b/index.html
@@ -271,16 +271,22 @@
       </section>
 
       <!-- Welcome section -->
-      <section class="w-8/12 mx-auto mt-10 flex flex-col md:flex-row items-center justify-between gap-8 py-16 md:py-24">
+      <section
+        class="w-8/12 mx-auto mt-10 flex flex-col md:flex-row items-center justify-between gap-8 py-16 md:py-24"
+      >
         <div>
           <img src="assets/resources/dish-2 2.png" alt="" />
         </div>
         <div>
-          <h2 class="text-3xl md:text-5xl font-semibold leading-snug md:leading-tight max-w-md mx-auto md:mx-0">
+          <h2
+            class="text-3xl md:text-5xl font-semibold leading-snug md:leading-tight max-w-md mx-auto md:mx-0"
+          >
             Wecome to Our <br />
             Restaurant
           </h2>
-          <p class="mt-4 text-gray-500 text-sm md:text-base leading-relaxed max-w-sm mx-auto md:mx-0">
+          <p
+            class="mt-4 text-gray-500 text-sm md:text-base leading-relaxed max-w-sm mx-auto md:mx-0"
+          >
             Lorem ipsum dolor sit amet, consectetur <br />
             adipiscing elit, sed do eiusmod tempor incididunt <br />
             ut labore et dolore magna aliqua.
@@ -298,6 +304,46 @@
             </button>
           </div>
         </div>
+      </section>
+
+      <!-- Chef section -->
+      <section class="w-8/12 mx-auto flex flex-col md:flex-row items-center justify-between gap-8 py-16 md:py-24">
+        <div class="w-8/12 mx-auto mt-20 mb-10">
+        <h2 class="text-5xl font-semibold">Our Expects Chef</h2>
+        <p class="text-gray-500 text-sm mt-8">
+          Lorem ipsum dolor sit amet, consectetur <br> adipiscing elit, sed do
+          eiusmod tempor incididunt <br> ut labore et dolore magna aliqua.
+        </p>
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-8 mt-10">
+          <div class="flex items-center gap-4">
+            <img src="assets/logo/check.png" alt="">
+            <p class="text-gray-500 text-sm">Lorem ipsum dolor sit amet, <br> consectetur </p>
+          </div>
+          <div class="flex items-center gap-4">
+            <img src="assets/logo/check.png" alt="">
+            <p class="text-gray-500 text-sm">Lorem ipsum dolor sit amet, <br> consectetur </p>
+          </div>
+          <div class="flex items-center gap-4">
+            <img src="assets/logo/check.png" alt="">
+            <p class="text-gray-500 text-sm">Lorem ipsum dolor sit amet, <br> consectetur </p>
+          </div>
+          <div class="flex items-center gap-4">
+            <img src="assets/logo/check.png" alt="">
+            <p class="text-gray-500 text-sm">Lorem ipsum dolor sit amet, <br> consectetur </p>
+          </div>
+          <div class="flex items-center gap-4">
+            <img src="assets/logo/check.png" alt="">
+            <p class="text-gray-500 text-sm">Lorem ipsum dolor sit amet, <br> consectetur </p>
+          </div>
+          <div class="flex items-center gap-4">
+            <img src="assets/logo/check.png" alt="">
+            <p class="text-gray-500 text-sm">Lorem ipsum dolor sit amet, <br> consectetur </p>
+          </div>
+        </div>
+      </div>
+      <div>
+        <img src="assets/resources/chef 1.png" alt="">
+      </div>
       </section>
     </main>
   </body>
