--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         >
           <!-- 1st card -->
           <div
-            class="relative max-w-xs bg-white pt-16 pb-6 px-6 rounded-tl-3xl rounded-br-3xl shadow-lg text-center mx-auto"
+            class="relative max-w-xs bg-white pt-16 pb-6 px-6 rounded-tl-4xl rounded-br-4xl shadow-lg text-center mx-auto"
           >
             <!-- Dish with price -->
             <div class="absolute -top-12 left-1/2 -translate-x-1/2 w-40 h-40">
@@ -179,7 +179,7 @@
           </div>
           <!-- 2nd card -->
           <div
-            class="relative max-w-xs bg-white pt-16 pb-6 px-6 rounded-tl-3xl rounded-br-3xl shadow-lg text-center mx-auto"
+            class="relative max-w-xs bg-white pt-16 pb-6 px-6 rounded-tl-4xl rounded-br-4xl shadow-lg text-center mx-auto"
           >
             <!-- Dish with price -->
             <div class="absolute -top-12 left-1/2 -translate-x-1/2 w-40 h-40">
@@ -209,7 +209,7 @@
           </div>
           <!-- 3rd card -->
           <div
-            class="relative max-w-xs bg-white pt-16 pb-6 px-6 rounded-tl-3xl rounded-br-3xl shadow-lg text-center mx-auto"
+            class="relative max-w-xs bg-white pt-16 pb-6 px-6 rounded-tl-4xl rounded-br-4xl shadow-lg text-center mx-auto"
           >
             <!-- Dish with price -->
             <div class="absolute -top-12 left-1/2 -translate-x-1/2 w-40 h-40">
@@ -239,7 +239,7 @@
           </div>
           <!-- 4th card -->
           <div
-            class="relative max-w-xs bg-white pt-16 pb-6 px-6 rounded-tl-3xl rounded-br-3xl shadow-lg text-center mx-auto"
+            class="relative max-w-xs bg-white pt-16 pb-6 px-6 rounded-tl-4xl rounded-br-4xl shadow-lg text-center mx-auto"
           >
             <!-- Dish with price -->
             <div class="absolute -top-12 left-1/2 -translate-x-1/2 w-40 h-40">
@@ -307,43 +307,84 @@
       </section>
 
       <!-- Chef section -->
-      <section class="w-8/12 mx-auto flex flex-col md:flex-row items-center justify-between gap-8 py-16 md:py-24">
+      <section
+        class="w-8/12 mx-auto flex flex-col md:flex-row items-center justify-between gap-8 py-16 md:py-24"
+      >
         <div class="w-8/12 mx-auto mt-20 mb-10">
-        <h2 class="text-5xl font-semibold">Our Expects Chef</h2>
-        <p class="text-gray-500 text-sm mt-8">
-          Lorem ipsum dolor sit amet, consectetur <br> adipiscing elit, sed do
-          eiusmod tempor incididunt <br> ut labore et dolore magna aliqua.
-        </p>
-        <div class="grid grid-cols-1 md:grid-cols-2 gap-8 mt-10">
-          <div class="flex items-center gap-4">
-            <img src="assets/logo/check.png" alt="">
-            <p class="text-gray-500 text-sm">Lorem ipsum dolor sit amet, <br> consectetur </p>
-          </div>
-          <div class="flex items-center gap-4">
-            <img src="assets/logo/check.png" alt="">
-            <p class="text-gray-500 text-sm">Lorem ipsum dolor sit amet, <br> consectetur </p>
-          </div>
-          <div class="flex items-center gap-4">
-            <img src="assets/logo/check.png" alt="">
-            <p class="text-gray-500 text-sm">Lorem ipsum dolor sit amet, <br> consectetur </p>
-          </div>
-          <div class="flex items-center gap-4">
-            <img src="assets/logo/check.png" alt="">
-            <p class="text-gray-500 text-sm">Lorem ipsum dolor sit amet, <br> consectetur </p>
-          </div>
-          <div class="flex items-center gap-4">
-            <img src="assets/logo/check.png" alt="">
-            <p class="text-gray-500 text-sm">Lorem ipsum dolor sit amet, <br> consectetur </p>
-          </div>
-          <div class="flex items-center gap-4">
-            <img src="assets/logo/check.png" alt="">
-            <p class="text-gray-500 text-sm">Lorem ipsum dolor sit amet, <br> consectetur </p>
+          <h2 class="text-5xl font-semibold">Our Expects Chef</h2>
+          <p class="text-gray-500 text-sm mt-8">
+            Lorem ipsum dolor sit amet, consectetur <br />
+            adipiscing elit, sed do eiusmod tempor incididunt <br />
+            ut labore et dolore magna aliqua.
+          </p>
+          <div class="grid grid-cols-1 md:grid-cols-2 gap-8 mt-10">
+            <div class="flex items-center gap-4">
+              <img src="assets/logo/check.png" alt="" />
+              <p class="text-gray-500 text-sm">
+                Lorem ipsum dolor sit amet, <br />
+                consectetur
+              </p>
+            </div>
+            <div class="flex items-center gap-4">
+              <img src="assets/logo/check.png" alt="" />
+              <p class="text-gray-500 text-sm">
+                Lorem ipsum dolor sit amet, <br />
+                consectetur
+              </p>
+            </div>
+            <div class="flex items-center gap-4">
+              <img src="assets/logo/check.png" alt="" />
+              <p class="text-gray-500 text-sm">
+                Lorem ipsum dolor sit amet, <br />
+                consectetur
+              </p>
+            </div>
+            <div class="flex items-center gap-4">
+              <img src="assets/logo/check.png" alt="" />
+              <p class="text-gray-500 text-sm">
+                Lorem ipsum dolor sit amet, <br />
+                consectetur
+              </p>
+            </div>
+            <div class="flex items-center gap-4">
+              <img src="assets/logo/check.png" alt="" />
+              <p class="text-gray-500 text-sm">
+                Lorem ipsum dolor sit amet, <br />
+                consectetur
+              </p>
+            </div>
+            <div class="flex items-center gap-4">
+              <img src="assets/logo/check.png" alt="" />
+              <p class="text-gray-500 text-sm">
+                Lorem ipsum dolor sit amet, <br />
+                consectetur
+              </p>
+            </div>
           </div>
         </div>
-      </div>
-      <div>
-        <img src="assets/resources/chef 1.png" alt="">
-      </div>
+        <div>
+          <img src="assets/resources/chef 1.png" alt="" />
+        </div>
+      </section>
+
+      <!-- Customer section -->
+      <section class="bg-gray-100 mt-20 mb-10">
+        <h2 class="text-5xl font-semibold text-center pt-16">
+          Our Happy Customers
+        </h2>
+        <p class="text-gray-500 text-sm text-center mt-8 mb-15">
+          Lorem ipsum dolor sit amet, consectetur <br />
+          adipiscing elit, sed do eiusmod tempor incididunt
+        </p>
+        <div
+          class="flex flex-col md:flex-row items-center justify-center gap-8 pb-20"
+        >
+          <img class="ml-45" src="assets/resources/Testimonial.png" alt="" />
+          <img src="assets/resources/Testimonial (1).png" alt="" />
+        </div>
+        <div class="flex justify-center items-center pb-6">
+          <img src="assets/resources/Dot.png" alt="" />
+        </div>
       </section>
     </main>
   </body>
